[package]
name = "json_to_markdown"
version = "0.1.0"
edition = "2021"
description = "A Rust library to convert JSON data into well-structured Markdown format."
license = "MIT"
authors = ["Abdullah Albanna <abdu.albanna@proton.me>"]
repository = "https://github.com/abdullah-albanna/json_to_markdown"
homepage = "https://github.com/abdullah-albanna/json_to_markdown"
documentation = "https://docs.rs/json_to_markdown"
readme = "README.md"
keywords = ["json", "markdown", "conversion", "rust", "serde"]
categories = ["text-processing", "parsing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inflections = "1.1.1"

[lib]
name = "json_to_markdown"
crate-type = ["lib"]

